Update JVM opts